# acpica

./: CMakeLists.txt
generate/vali/: Makefile
source/components/utilities/: utstrsuppt.c
source/include/: acapps.h  acpixf.h  acutils.h
source/include/platform/: acenv.h  acvali.h
source/os_specific/service_layers/: osvaliktbl.c  osvalikxf.c
tests/aslts/src/runtime/cntl/: ehandle.asl
